// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Field English: Renders without exploding as .button 1`] = `
<div
  class="jsx-601574895 button"
>
  <button
    class="jsx-601574895"
    type="submit"
  >
    Book Now!
  </button>
</div>
`;

exports[`Component: Field English: Renders without exploding as .email 1`] = `
<div
  class="jsx-2142180042 email"
>
  <label
    class="jsx-2142180042"
    for="email"
  >
    Email
  </label>
  <input
    class="jsx-2142180042"
    name="email"
    type="email"
  />
  <span
    class="jsx-2142180042 errors"
  />
</div>
`;

exports[`Component: Field English: Renders without exploding as .firstName 1`] = `
<div
  class="jsx-2142180042 firstName"
>
  <label
    class="jsx-2142180042"
    for="firstName"
  >
    First Name
  </label>
  <input
    class="jsx-2142180042"
    name="firstName"
    type="text"
  />
  <span
    class="jsx-2142180042 errors"
  />
</div>
`;

exports[`Component: Field English: Renders without exploding as .lastName 1`] = `
<div
  class="jsx-2142180042 lastName"
>
  <label
    class="jsx-2142180042"
    for="lastName"
  >
    Last Name
  </label>
  <input
    class="jsx-2142180042"
    name="lastName"
    type="text"
  />
  <span
    class="jsx-2142180042 errors"
  />
</div>
`;

exports[`Component: Field English: Renders without exploding as .message 1`] = `
<div
  class="jsx-2142180042 message"
>
  <label
    class="jsx-2142180042"
    for="message"
  >
    Short Message
  </label>
  <input
    class="jsx-2142180042"
    name="message"
    type="text"
  />
  <span
    class="jsx-2142180042 errors"
  />
</div>
`;

exports[`Component: Field English: Renders without exploding as .phone 1`] = `
<div
  class="jsx-2142180042 phone"
>
  <label
    class="jsx-2142180042"
    for="phone"
  >
    Phone
  </label>
  <input
    class="jsx-2142180042"
    name="phone"
    type="tel"
  />
  <span
    class="jsx-2142180042 errors"
  />
</div>
`;

exports[`Component: Field Russian: Renders without exploding as .button 1`] = `
<div
  class="jsx-601574895 button"
>
  <button
    class="jsx-601574895"
    type="submit"
  >
    Забронировать сейчас!
  </button>
</div>
`;

exports[`Component: Field Russian: Renders without exploding as .email 1`] = `
<div
  class="jsx-2142180042 email"
>
  <label
    class="jsx-2142180042"
    for="email"
  >
    Электронный адрес
  </label>
  <input
    class="jsx-2142180042"
    name="email"
    type="email"
  />
  <span
    class="jsx-2142180042 errors"
  />
</div>
`;

exports[`Component: Field Russian: Renders without exploding as .firstName 1`] = `
<div
  class="jsx-2142180042 firstName"
>
  <label
    class="jsx-2142180042"
    for="firstName"
  >
    Имя
  </label>
  <input
    class="jsx-2142180042"
    name="firstName"
    type="text"
  />
  <span
    class="jsx-2142180042 errors"
  />
</div>
`;

exports[`Component: Field Russian: Renders without exploding as .lastName 1`] = `
<div
  class="jsx-2142180042 lastName"
>
  <label
    class="jsx-2142180042"
    for="lastName"
  >
    Фамилия
  </label>
  <input
    class="jsx-2142180042"
    name="lastName"
    type="text"
  />
  <span
    class="jsx-2142180042 errors"
  />
</div>
`;

exports[`Component: Field Russian: Renders without exploding as .message 1`] = `
<div
  class="jsx-2142180042 message"
>
  <label
    class="jsx-2142180042"
    for="message"
  >
    Сообщение
  </label>
  <input
    class="jsx-2142180042"
    name="message"
    type="text"
  />
  <span
    class="jsx-2142180042 errors"
  />
</div>
`;

exports[`Component: Field Russian: Renders without exploding as .phone 1`] = `
<div
  class="jsx-2142180042 phone"
>
  <label
    class="jsx-2142180042"
    for="phone"
  >
    Телефон
  </label>
  <input
    class="jsx-2142180042"
    name="phone"
    type="tel"
  />
  <span
    class="jsx-2142180042 errors"
  />
</div>
`;
